--- a/contact-app/src/components/styles/ContactFavorite.module.css
+++ b/contact-app/src/components/styles/ContactFavorite.module.css
@@ -4,3 +4,9 @@
     justify-content: center;
     margin: 0 16px;
 }
+.noFavoritesMessage {
+    text-align: center;
+    color: #555;
+    font-size: 1.2em;
+    margin-top: 20px;
+  }
